# parsec-openssl-provider

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  ci.sh  deny.toml
.github/actions/ci_script/: action.yml
.github/workflows/: ci.yml  nightly.yml
parsec-openssl-provider/: Cargo.toml
parsec-openssl-provider-shared/: Cargo.toml
parsec-openssl-provider-shared-test/: Cargo.toml  build.rs
parsec-openssl-provider-shared-test/src/: lib.rs
parsec-openssl-provider-shared-test/tests/: provider.rs
parsec-openssl-provider-shared/e2e_tests/: Cargo.toml
parsec-openssl-provider-shared/e2e_tests/src/: lib.rs
parsec-openssl-provider-shared/e2e_tests/tests/: handshake.rs  keys.rs  mod.rs  provider.rs  sign.rs  store.rs
parsec-openssl-provider-shared/src/: catch.rs  lib.rs
parsec-openssl-provider/src/: catch.rs  lib.rs  provider.rs
parsec-openssl-provider/src/keymgmt/: mod.rs
parsec-openssl-provider/src/signature/: mod.rs
parsec-openssl-provider/src/store/: mod.rs
parsec-openssl-sys2/: Cargo.toml  build.rs
parsec-openssl-sys2/src/: lib.rs  param.rs
parsec-openssl-sys2/src/c/: openssl.h
parsec-openssl2/: Cargo.toml
parsec-openssl2/src/: lib.rs  types.rs
tests/: ci.sh  cross-compile.sh  openssl.cnf  pkg-config  setup_tls.sh
tests/docker_image/: cross-compile-openssl.sh  parsec-openssl-provider-test.Dockerfile  parsec-service-test-cross-compile.Dockerfile
