[package]
name = "parsec-openssl-provider"
version = "0.1.0"
authors = ["Parsec Project Contributors"]
description = "A parsec openssl provider static library"
license = "Apache-2.0"
readme = "README.md"
keywords = ["security", "service"]
categories = ["cryptography", "hardware-support"]
edition = "2021"
repository = "https://github.com/parallaxsecond/parsec-openssl-provider"

[dependencies]
log = "0.4"
parsec-client = "0.16.0" 
parsec-openssl2 = { path = "../parsec-openssl2" }
openssl-errors = "0.2.0"
env_logger = "0.10.2"
num-traits = "0.2.18"
num-derive = "0.4.2"
picky-asn1-x509 = "0.12.0"
picky-asn1 = "0.8.0"
picky-asn1-der = "0.4.0"
serde = "1.0.123"
