[package]
name = "e2e_tests"
version = "0.1.0"
authors = ["Parsec Project Contributors"]
description = "An end to end test framework for the parsec provider"
license = "Apache-2.0"
readme = "README.md"
keywords = ["security", "service"]
categories = ["cryptography", "hardware-support"]
edition = "2021"
repository = "https://github.com/parallaxsecond/parsec-openssl-provider"
publish = false

[dependencies]
foreign-types-shared = "0.1.1"
parsec-openssl-provider = { path ="../../parsec-openssl-provider" }
parsec-client = "0.16.0"
sha2 = "0.10.8"
openssl = "0.10.63"
picky-asn1-der = "0.4.0"

[build-dependencies]
pkg-config = "0.3.18"
bindgen = { version = "0.66.1" }
